@@ -173,6 +173,7 @@ elseif (isset($_REQUEST['save'])) {
 			);
 			DBend(true);
 			ob_end_clean();
+
 			redirect(CWebUser::$data['last_page']['url']);
 		}
 		else {
